some pics added to layout, logos and backgrounds fixed, parallax OK, 1 product added

--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
         <!-- Destaque -->
         <main>
             <div class="Container">
-            <h1>Cachadura</h1><br>
-            <h2>Cachaças Artesanais</h2><br>
-            <br><a class="Botao" href="https://api.whatsapp.com/send?phone=5519997412924" target="_blank">Realizar orçamento</a>
+            <img src="img/textBlack.png" alt="Cachadura" class="h1">
+            <!-- h1>Cachadura</h1><br> -->
+            <img src="img/blackh2.png" alt="Harmonização Artesanal" class="h2">
+            <!-- <h2>Cachaça Artesanal Harmonizada</h2><br> -->
+            <br><a class="Botao" href="https://api.whatsapp.com/send?phone=5519997412924" target="_blank">Compre já!</a>
             </div>
 
         </main>
@@ -41,15 +43,14 @@
         <section id="Sobre">   
             <div class="Container">
                 <div class="destaqueSobre">
-                    <h2>Sobre nós</h2><br>
+                    <h2><strong>Sobre nós</strong></h2><br>
                 </div>
                 <div class="textoSobre">
-                    <p>Atuando a cerca de <strong>20 anos</strong> pela região de <strong>Campinas</strong> no estado de <strong>São Paulo</strong>, estamos sempre procurando atender a necessidade de nossos clientes.</p>
-                    <p>Procurando móveis sob medida com <strong>qualidade excepcional</strong> e design personalizado?<br><Strong><b> Dr. Wood te atende!</b></Strong><br><br> Somos apaixonados por transformar <strong>seus sonhos em realidade</strong> através da nossa maestria em marcenaria.</p>
-                    <p>Aqui, cada peça é meticulosamente trabalhada para expressar sua personalidade única e atender às suas necessidades específicas.</p>
-                    <p>Nossos <strong>mestres artesãos</strong> são especialistas em criar móveis feitos sob medida que se <strong>encaixam perfeitamente em qualquer espaço</strong>, seja em sua casa, escritório ou comércio.<br><br> Através de uma combinação de habilidades tradicionais trazidas por <strong>gerações</strong>, transformamos a beleza da madeira em verdadeiras <strong>obras de arte</strong>, que se destacam pela <strong>elegância e funcionalidade</strong>.</p><br>
-                        <h3>Venha realizar seu sonho!</h3>
+                    <p>A cachaça CACHADURA é feita inteiramente de maneira artesal.</p>
+                    <p>A quase <b>4 anos</b> no mercado, a nossa cachaça possui o verdadeiro sabor de rapadura</p><br>
+                    <p>Fabricamos garrafas de <b>700ml</b>, <b>270ml</b> e doses de <b>60ml</b>.</p><br>
                 </div>
+                <img src="img/trio.jpg" alt="Trio Cachadura" class="Trio">
             
             </div>
 
@@ -59,9 +60,12 @@
             <h1>Conheça nossos produtos!</h1>
             <div class="Cards Flex3">
                 <div class="Card">
-                    <img src="img/pic1.bmp" alt="Cachadura Tradicional">
-                    <br><br><h2>Tradicional</h2>
-                    <p>Cachaça artesanal harmonizada com rapadura.</p>
+                    <img src="img/tradicional.jpg" alt="Cachadura Tradicional">
+                    <br><br><h2><strong>Tradicional</strong></h2><hr>
+                    <p> <STRONG>Já conhecem nossa cachaça deliciosa?!</STRONG><br>
+                        <b>Grande 700 ml</b><br>
+                        <b>Pequena 270 ml.</b>
+                    </p>
                 </div>
                 <div class="Card">
                     <img src="img/pic3.bmp" alt="Amarula">
