some new pics added, desktop menu solved, logo icon solved, background solved

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
         <header id="Inicio">
             <div class="Container Flex">
                 <div id="logo">
-                    <a href="index.html"><img src="img/icon.png" alt="Logotipo" href="index.html"></a>
+                    <a href="index.html"><img src="img/iconwhite.png" alt="Logotipo" href="index.html"></a>
                 </div>
             <nav>
+                <div class="desktop-menu">
                 <input type="checkbox" name="menu" id="check">
                 <label for="check">&#x268c;</label>
                 <ul>
@@ -25,17 +26,21 @@
                     <li><a href="login.html">Login</a></li>
                     <li><a href="#Contato">Contato</a></li>
                 </ul>
+                </div>
             </nav>
             </div>
         </header>
         <!-- Destaque -->
         <main>
-            <div class="Container">
-            <img src="img/textBlack.png" alt="Cachadura" class="h1">
+
+            <div class="Container Flexzin">
+            <img src="img/textBlackWhite.png" alt="Cachadura" class="h1"><br>
             <!-- h1>Cachadura</h1><br> -->
-            <img src="img/blackh2.png" alt="Harmonização Artesanal" class="h2">
+            <img src="img/blackwhiteh2.png" alt="Harmonização Artesanal" class="h2">
             <!-- <h2>Cachaça Artesanal Harmonizada</h2><br> -->
-            <br><a class="Botao" href="https://api.whatsapp.com/send?phone=5519997412924" target="_blank">Compre já!</a>
+            </div>
+            <div class="Container">
+            <a class="Botao" href="https://api.whatsapp.com/send?phone=5519997412924" target="_blank">Compre já!</a>
             </div>
 
         </main>
