initial javascript insertion

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" href="img/icon.png">
+        <script src="script.js" defer></script>
         <link rel="stylesheet" href="style.css">
             <title>CACHADURA - Cachaça Artesanal</title>
 
@@ -64,7 +65,8 @@
         <article id="Portifolio">
             <h1>Conheça nossos produtos!</h1>
             <div class="Cards Flex3">
-                <div class="Card">
+                <div class="imgx" id="imgx">
+                <div class="Card" id="imgx">
                     <img src="img/tradicional.jpg" alt="Cachadura Tradicional">
                     <br><br><h2><strong>Tradicional</strong></h2><hr>
                     <p> <STRONG>Já conhecem nossa cachaça deliciosa?!</STRONG><br>
@@ -72,15 +74,16 @@
                         <b>Pequena 270 ml.</b>
                     </p>
                 </div>
-                <div class="Card">
+                <div class="Card" id="imgx">
                     <img src="img/pic3.bmp" alt="Amarula">
                     <br><br><h2>Amarula</h2>
                     <p>Conheça nossa versão de amarula.</p>
                 </div>
-                <div class="Card">
+                <div class="Card" id="imgx">
                     <img src="img/pic5.bmp" alt="Sala">
                     <br><br><h2>Chocolate</h2>
                     <p>Nossa cachaça harmonizada com chocolate.</p>
+                </div>
                 </div>
             </div>
         </article>
